# fast_api

./: README.md  main.py  mkdocs.yml  pyproject.toml
alembic/versions/: bd30cf7158e0_create_users_table.py  efb65f6df660_moving_is_active_to_user_table.py
api/: courses.py  users.py
api/utils/: courses.py  users.py
db/: db_setup.py
db/models/: mixins.py  user.py
docs/: alembic.md  api.md  db_setup.md  index.md
pydantic_schemas/: courses.py  user.py
