[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Ale Maza <almazagit1002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
