[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Ale Maza <almazagit1002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
pydantic = "^2.7.3"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

